# sunmao

./: .flake8  .gitignore  LICENSE  Makefile  README.md  RELEASE_GUIDE.md  SETUP_SUMMARY.md  pyproject.toml  readthedocs.yaml
.github/workflows/: ci.yml
docs/: api_reference.rst  changelog.rst  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst  requirements.txt
examples/: Untitled.ipynb  demo.py  demo1.py  legend_examples.py  multi_panel_legend_example.py  new_api_example.py  new_global_legend_usage.py  test_corrected_pycomplexheatmap_style.py  test_improved_legend_design.py  test_improved_legend_design_fixed.py  test_legend_mixing_problem.py  test_legend_system.py  test_subplot_legend_independence.py
scripts/: release.py  setup.py
sunmao/: __init__.py  legend_manager.py  mortise_tenson.py
tests/: test_sunmao.py
